--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "install": "^0.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.20.1"
+    "react-router-dom": "^6.20.1",
+    "shadcn-ui": "^0.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.37",
