--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
+    "react-slick": "^0.29.0",
     "shadcn-ui": "^0.4.1",
+    "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
     "vite-plugin-svgr": "^4.2.0"
