--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@react-pdf/renderer": "^3.1.14",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "install": "^0.13.0",
