added download doc in legal info

--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
