--- a/components.json
+++ b/components.json
@@ -7,7 +7,8 @@
     "config": "tailwind.config.js",
     "css": "src/index.css",
     "baseColor": "slate",
-    "cssVariables": false
+    "cssVariables": true,
+    "prefix": ""
   },
   "aliases": {
     "components": "@/src/components",
