--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "json-server": "json-server --watch data.json --port 3000",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -14,17 +15,21 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@react-pdf/renderer": "^3.1.14",
-    "@tanstack/react-query": "^5.17.0",
+    "@tanstack/react-query": "^5.17.14",
+    "@tanstack/react-query-devtools": "^5.17.21",
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "install": "^0.13.0",
+    "json-server": "^1.0.0-alpha.19",
     "leaflet": "^1.9.4",
+    "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
+    "react-query": "^3.39.3",
     "react-router-dom": "^6.20.1",
     "shadcn-ui": "^0.4.1",
     "swiper": "^11.0.5",
