--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "json-server": "^1.0.0-alpha.19",
+    "jspdf": "^2.5.1",
     "leaflet": "^1.9.4",
     "lodash": "^4.17.21",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-hook-form": "^7.49.3",
+    "react-hook-form": "^7.50.1",
     "react-leaflet": "^4.2.1",
     "react-leaflet-cluster": "^2.1.0",
     "react-query": "^3.39.3",
