--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "axios": "^1.6.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "cors": "^2.8.5",
     "install": "^0.13.0",
     "json-server": "^1.0.0-alpha.19",
     "leaflet": "^1.9.4",
